# metamachine

./: README.md
ip/blk_mem_user_0/: blk_mem_user_0.dcp  blk_mem_user_0.veo  blk_mem_user_0.vho  blk_mem_user_0.xci  blk_mem_user_0.xml  blk_mem_user_0_sim_netlist.v  blk_mem_user_0_sim_netlist.vhdl  blk_mem_user_0_stub.v  blk_mem_user_0_stub.vhdl
ip/blk_mem_user_0/sim/: blk_mem_user_0.v
ip/blk_mem_user_0/synth/: blk_mem_user_0.vhd
microcode/: builtin.mmm
mmmasm/: Cargo.toml
mmmasm/src/: main.rs
simulation/: cpu_test.vhd
src/: builtin_microcode.vhd  cpu.vhd  def.vhd  defs.vhd  execution_unit.vhd  memory_sequencer.vhd  ram.vhd  stage_commit.vhd  stage_decode.vhd  unification.vhd
